# scopt

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: release-drafter.yml
.github/workflows/: release-drafter.yaml  release.yaml  test.yml
docs/: build_and_publish_pypi.md  update_aws_instance_mapping.md
src/scopt/: __init__.py  optimizer.py
src/scopt/instances/: __init__.py  aws.py  base.py
tests/: test_optimizer.py
tests/instances/: test_aws.py  test_base.py
tools/: build_package.sh  scrape_ec2_config.py  static_analysis.sh
