[metadata]
name = scopt
version = attr: scopt.__version__.__version__
author = Kanchi Shimono
author_email = dev.kanchi.shimono@gmail.com
description = Calculate optimized properties of Spark configuration
long_description = flie: README.md
long_description_content_type = text/markdown
url = https://github.com/KanchiShimono/scopt
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
  Topic :: Utilities

[options]
python_requires = >=3.8.0
package_dir =
  = src
packages = find:

[options.extras_require]
test =
  mypy
  flake8
  black
  isort
  pytest

[options.packages.find]
where = src

[flake8]
extend-ignore = E203
max-complexity = 10
exclude = .git,__pycache__

[isort]
force_grid_wrap = 0
include_trailing_comma = True
multi_line_output = 3
use_parentheses = True
known_first_party = scopt

[mypy]
namespace_packages = True
show_column_numbers = True
ignore_missing_imports = True
# The fllowing options are enabled by --strict option
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True
